--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="15dp"
+    android:padding="20dp"
     tools:context=".MainActivity">
 <LinearLayout
     android:layout_width="match_parent"
@@ -14,9 +14,8 @@
     android:gravity="center"
     android:orientation="vertical">
     <ImageView
-        android:layout_marginVertical="20dp"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_width="150dp"
+    android:layout_height="150dp"
         android:src="@drawable/a1414"/>
 </LinearLayout>
 
@@ -24,6 +23,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
         android:text="아이디"
         android:textSize="20sp"/>
     <EditText
@@ -36,13 +36,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
+        android:layout_marginTop="15dp"
         android:text="비밀번호"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="24sp"
         android:hint="비밀번호 입력"
-        android:inputType="numberPassword"/>
+        android:inputType="textPassword"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,15 +64,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
+
     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="회원가입"
-        android:textSize="20sp"
         android:backgroundTint="@color/white"
+        android:text="회원가입"
         android:textColor="@color/black"
-        />
+        android:textSize="20sp" />
     <Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
