--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,6 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_weight="1"/>
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -78,6 +79,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="로그인"
+        android:layout_marginStart="5dp"
         android:textSize="20sp"
         android:backgroundTint="@color/white"
         android:textColor="@color/black"/>
