--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@drawable/draw"
     tools:context=".MainActivity">
 <LinearLayout
     android:layout_width="match_parent"
@@ -25,37 +26,45 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:text="아이디"
-        android:textSize="20sp"/>
+        android:textSize="24sp"/>
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/draw"
         android:hint="이메일 양식"
-        android:textSize="24sp"
-        android:inputType="textEmailAddress"/>
+        android:inputType="textEmailAddress"
+        android:textSize="30sp" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
         android:layout_marginTop="15dp"
-        android:text="비밀번호"/>
+        android:text="비밀번호"
+        android:textSize="24sp" />
+
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
+        android:background="@drawable/draw"
         android:hint="비밀번호 입력"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:textSize="30sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <CheckBox
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="자동 로그인"/>
-</LinearLayout>
+            android:text="자동 로그인" />
+    </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="0dp"
@@ -66,22 +75,23 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <Button
+    <android.widget.Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:backgroundTint="@color/white"
+        android:background="@drawable/shape"
         android:text="회원가입"
         android:textColor="@color/black"
         android:textSize="20sp" />
-    <Button
+    <android.widget.Button
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="로그인"
+        android:background="@drawable/shape"
         android:layout_marginStart="5dp"
         android:textSize="20sp"
-        android:backgroundTint="@color/white"
+
         android:textColor="@color/black"/>
 </LinearLayout>
 
